2012-06-25  Ramon Novoa  <rnovoa@artica.es>

	* DEBIAN/control,
	  DEBIAN/make_deb_package.sh,
	  conf/pandora_server.conf,
	  pandora_server.spec,
	  lib/PandoraFMS/Config.pm,
	  util/pandora_db.pl,
	  util/pandora_manage.pl: Updated version strings.

2012-06-22  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/DB.pm,
	  lib/PandoraFMS/Core.pm,
	  lib/PandoraFMS/ReconServer.pm: Reverted some improvements that seem
	  to have been accidentally removed.

	* lib/PandoraFMS/Tools.pm: Use the ping command's count parameter
	  instead of a loop for icmp_checks. Slower but more reliable.

2012-06-21  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: Added inventory server statistics.

2012-06-21 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* util/pandora_xml_stress.conf
	 util/pandora_xml_stress.pl: Changed XML character codification 
	of Pandora XML stress to UTF-8.
	
	Merged from trunk.
	
2012-06-21  Kikuchi Koichiro <koichiro@rworks.jp>

	* pandora_server.redhat.spec: Small fixes: removed duplicated useradd
	 line, don't remove pandora user after uninstall, added collections
	 directory.

2012-06-21  Sancho Lerena <slerena@artica.es>

        * lib/PandoraFMS/NetworkServer.pm: SNMP values starting with quotes
        are now stripped of starting/ending double quotes. This will help to
        get numeric (float data) as strings.

2012-06-12 Dario Rodriguez <dario.rodriguez@artica.es>

        * lib/PandoraFMS/Core.pm: Fixed an error with group_statistics agent
        queries.

2012-06-12 Dario Rodriguez <dario.rodriguez@artica.es>

	* lib/PandoraFMS/Core.pm: Fixed an error with group_statistics agent
	queries.

2012-06-12  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: Added export server stats.

2012-06-12 Miguel de Dios  <miguel.dedios@artica.es>
	
	* lib/PandoraFMS/ReconServer.pm: fixed the recode into html entities
	the name of network component into the function
	"create_network_profile_modules".
