@@ -1,7 +1,7 @@
 #############################################################################
 # Pandora FMS Server Parameters
 # Pandora FMS, the Flexible Monitoring System.
-# Version 4.2
+# Version 4.0.2
 # Licensed under GPL license v2,
 # (c) 2003-2011 Artica Soluciones Tecnologicas
 # http://www.pandorafms.com
